# payment-gateway-challenge-python

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  main.py  payment-gateway-openapi.yaml  pyproject.toml
payment_gateway_api/: app.py  config.py  dependencies.py  exceptions.py  status_enum.py
payment_gateway_api/models/: request.py  response.py
payment_gateway_api/repositories/: payments_repository.py
payment_gateway_api/services/: payment_gateway_service.py
tests/: test_example.py  test_http_client.py  test_payment_gateway_service.py  test_payments_api.py  test_repositories.py  test_request_model_validation.py
